fix GIArgument being exported as _Argument in .gir

https://bugzilla.gnome.org/show_bug.cgi?id=635128